assets/css/style.css
/* Font family */
@import url('https://fonts.cdnfonts.com/css/monster-hunter');

/* Asterisk wildcard selector/general styles */
* {
    margin: 0;
}

/* General styles */
body {
    font-family: 'Monster Hunter', sans-serif;;
}

.heading-size-1 {
    padding-bottom: 10px;
    letter-spacing: 2px;
}

.heading-size-3-4 {
    padding-bottom: 5px;
    letter-spacing: 1px;
}

/* Header */
#logo {
    width: 80px;
    height: 80px;
    padding: 7px;
}

header {
    background-color: #000000;
    position: fixed;
    z-index: 100;
    width: 100%;
    top: 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

header a {
    color: #ffffff;
    text-decoration: none;
    font-size: 15px;
}

header nav li {
    margin-bottom: 15px;
}

.navigation-links {
    list-style-type: none;
    letter-spacing: 1px;
    padding: 0;
    padding-bottom: 2px;
}

/* Toggle button drop down */
#drop-down-button:checked~nav {
    display: block;
}

#drop-down-button {
    display: none;
}

.drop-down-button-label {
    color: #ffffff;
    font-size: 60px;
    padding-right: 10px;
}

/* Home section */
#monster-hunter {
    margin-top: 96px;
}

.home-image {
    position: relative;
}

.home-background-image {
    width: 100%;
    height: 100%;
    opacity: 0.5;
}

.introduction {
    position: absolute;
    top: 0;
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    font-size: medium;
    color: #001747;
}

.introduction h1 {
    font-size: xx-large;
}

.dramatic-words {
    font-size: x-large
}

/* Footer */
footer h1 {
    text-align: center;
}

.form-introduction {
    text-align: center;
}

/* Form background image */
#form-background-image {
    background: url(../images/monster\ hunter\ guild\ hall.jpg) no-repeat center center/cover;
}

/* Form */
.guild-form {
    color: #000000;
    background-color: rgba(255, 255, 255, 0.6);
    padding: 20px;
}

form {
    text-align: center;
}

#first-name {
    padding-right: 20px;
}

#last-name {
    padding-right: 22px;
}

.user-details {
    margin-top: 7px;
}

.weapon-choice {
    display: flex;
    justify-content: center;
}

.weapon-choice-button {
    margin-top: 7px;
}

.join-button {
    margin-top: 10px;
    margin-right: 10px;
    background-color: #ffffff;
    text-transform: uppercase;
}

/* Social media links */
footer ul {
    display: flex;
    padding: 10px;
    background-color: #000000;
    justify-content: center;
}

footer li {
    padding: 5px;
    font-size: large;
    list-style-type: none;
}

footer i {
    text-decoration: none;
    color: #ffffff;
}

@media screen and (min-width:768px) {
    /* Header */
    #logo {
        width: 80px;
        height: 80px;
        padding: 7px;
    }

    header {
        background-color: #000000;
        position: fixed;
        z-index: 100;
        width: 100%;
        display: flex;
        align-items: center;
        top: 0;
    }
    
    header a {
        color: #ffffff;
        text-decoration: none;
        font-size: 15px;
    }
    
    .navigation {
        width: 100%;
        display: flex;
        justify-content: right;
    }
    
    .navigation-links {
        display: flex;
        list-style-type: none;
        letter-spacing: 1px;
    }
    
    header li {
        padding: 10px;
    }
    
    header li a:hover {
        color: #000000;
        background-color: #ffffff;
        padding: 5PX;
    }

    .drop-down-button-label {
        display: none;
    }

    /* Home section*/
    .introduction {
        font-size: xx-large;
    }

    #monster-hunter h1 {
        padding-bottom: 40px;
    }

    #monster-hunter h4 {
        padding-bottom: 10px;
    }
}

@media screen and (max-width:767px) {
    /* Toggle button drop down */
    nav {
        position: absolute;
        background-color: #000000;
        width: 100%;
        text-align: center;
        display: none;
        top: 100%;
    }
}

